added descriptive messages to model-add-fieldsite.html

--- a/frontend/templates/home/django-material-dashboard/model-add.html
+++ b/frontend/templates/home/django-material-dashboard/model-add.html
@@ -15,6 +15,7 @@
     </div>
 
     <div class="card card-body mx-3 mx-md-4 mt-n6">
+      {% block messages %} {% endblock %}
       <div class="row min-vh-80 h-100">
         <div class="col-12">
           <h3 class="text-center">{{ page_title|title }}</h3>
