--- a/frontend/templates/home/django-material-kit/metadata-standards.html
+++ b/frontend/templates/home/django-material-kit/metadata-standards.html
@@ -37,10 +37,11 @@
                 <figure>
                   <p class="pe-md-5 mb-4">
                     While several metadata standards are applicable to different project data types,
-                    recent studies<sup><a href="https://doi.org/10.1186/s13742-015-0074-5">1</a>,<a href="https://doi.org/10.1038/nbt.1823">2</a></sup>
+                    recent studies<sup><a target="_blank" href="https://doi.org/10.1186/s13742-015-0074-5">1</a>,
+                    <a target="_blank" href="https://doi.org/10.1038/nbt.1823">2</a></sup>
                     recommend the use of the Genomic Standards Consortium’s (GSC) ‘Minimum information about a marker gene
                     sequence’ MIMARKS, Minimum Information about any (x) Sequence
-                    (<a href="https://github.com/GenomicsStandardsConsortium/mixs">MIxS - metadata template applicable to
+                    (<a target="_blank" href="https://github.com/GenomicsStandardsConsortium/mixs">MIxS - metadata template applicable to
                     sequence data</a>) and Darwin Core metadata standards. In addition to the minimum information
                     checklists, MIxS includes environmental packages. We used these checklists and environmental
                     packages for documenting markers, sequences, and field collection sites. MIMARKS incorporates
@@ -57,7 +58,7 @@
                     project are documented. <br>
                   </p>
                   <figcaption class="blockquote-footer ps-3">Metadata Standards in <cite title="Maine-eDNA Data Management Plan">Maine-eDNA Data Management Plan</cite></figcaption>
-                  <a href="https://gensc.org/" class="text-info icon-move-right">More about the Genomic Standards Consortium (GSC)
+                  <a target="_blank" href="https://gensc.org/" class="text-info icon-move-right">More about the Genomic Standards Consortium (GSC)
                     <i class="fas fa-arrow-right text-sm ms-1"></i>
                   </a>
                 </figure>
@@ -76,12 +77,12 @@
         <p class="pe-md-5">
           <sup>1</sup>Tedersoo, L., Ramirez, K. S., Nilsson, R. H., Kaljuvee, A., Kõljalg, U., & Abarenkov, K. (2015).
           Standardizing metadata and taxonomic identification in metabarcoding studies. GigaScience, 4(1), 34.
-          <a href="https://doi.org/10.1186/s13742-015-0074-5">https://doi.org/10.1186/s13742-015-0074-5</a> <br><br>
+          <a target="_blank" href="https://doi.org/10.1186/s13742-015-0074-5">https://doi.org/10.1186/s13742-015-0074-5</a> <br><br>
           <sup>2</sup>Yilmaz, P., Kottmann, R., Field, D., Knight, R., Cole, J. R., Amaral-Zettler, L., Gilbert, J. A.,
           Karsch-Mizrachi, I., Johnston, A., Cochrane, G., Vaughan, R., Hunter, C., Park, J., Morrison, N., Rocca-Serra,
           P., Sterk, P., Arumugam, M., Bailey, M., Baumgartner, L., … Glöckner, F. O. (2011). Minimum information about
           a marker gene sequence (MIMARKS) and minimum information about any (x) sequence (MIxS) specifications. Nature
-          Biotechnology, 29(5), 415–420. <a href="https://doi.org/10.1038/nbt.1823">https://doi.org/10.1038/nbt.1823</a>
+          Biotechnology, 29(5), 415–420. <a target="_blank" href="https://doi.org/10.1038/nbt.1823">https://doi.org/10.1038/nbt.1823</a>
         </p>
       </div>
     </div>
