--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -14,68 +14,69 @@
 {% endblock extrahead %}
 
 {% block messages %}
-<div class="row">
-     <p class="pe-md-5 mb-4">
-    The following Web Map and Form are to create a unique Site ID.
-    A use case for a Unique Site ID is when a location is revisited to collect material samples at some regular interval.
-    </p>
-</div>
-<div class="row">
-    <p class="pe-md-5 mb-4">
-    While using the Sites Web Map, if it is observed that there is already a Site at the desired sampling location, please re-use that Site ID.
-    Future analyses and aggregations will be made much simpler by using an identifier that denotes a common location.
-    </p>
-</div>
-<div class="row">
-    <div class="col-md-8 col-12 my-auto">
-        <h3>Naming Convention for Site IDs</h3>
-        <p class="pe-md-5 mb-4"><strong>pRR_SCC</strong> <br>
-            Where: <br>
-            <ul>
-                <li>p = Grant or project code</li>
-                <li>RR = Watershed region code</li>
-                <li>S = System type code</li>
-                <li>CC = Two digit sequence, or number</li>
-            </ul>
+<div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
+    <h3>Create New Field Site</h3>
+    <div class="row">
+         <p class="pe-md-5 mb-4">
+            The following Web Map and Form are to create a unique Site ID.
+            A use case for a Unique Site ID is when a location is revisited to collect material samples at some regular interval.
         </p>
     </div>
-    <div class="col-md-4 col-12 my-auto">
-        <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/naming-convention-field-site.png' %}" alt="field site naming convention">
+    <div class="row">
+        <p class="pe-md-5 mb-4">
+            While using the Sites Web Map, if it is observed that there is already a Site at the desired sampling location, please re-use that Site ID.
+            Future analyses and aggregations will be made much simpler by using an identifier that denotes a common location.
+        </p>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-12 col-12 my-auto">
-        <h3>Watershed Boundary Dataset</h3>
-
-            <p class="pe-md-5 mb-4">
-                The regions used to define unique Site IDs are from the United States Geological Survey (USGS) Watershed
-                Boundary Dataset (WBD) hydrologic unit code 8 (HUC8). For more information, please visit the
-                <a target="_blank" href="https://www.usgs.gov/core-science-systems/ngp/national-hydrography/watershed-boundary-dataset?qt-science_support_page_related_con=4#qt-science_support_page_related_con">USGS WBD website</a>.
-                Basing naming conventions on hydrologic units were adopted from the
-                <a target="_blank" href="https://doi.org/10.2737/RDS-2018-0010">U.S. Forest Service eDNAtlas database</a>.
+    <div class="row">
+        <div class="col-md-8 col-12 my-auto">
+            <h3>Naming Convention for Site IDs</h3>
+            <p class="pe-md-5 mb-4"><strong>pRR_SCC</strong> <br>
+                Where: <br>
+                <ul>
+                    <li>p = Grant or project code</li>
+                    <li>RR = Watershed region code</li>
+                    <li>S = System type code</li>
+                    <li>CC = Two digit sequence, or number</li>
+                </ul>
             </p>
-        <figure>
-            <blockquote class="blockquote">
-                <p class="ps-2">
-                    "The Watershed Boundary Dataset (WBD) is a seamless, national hydrologic unit dataset. Simply put,
-                    hydrologic units represent the area of the landscape that drains to a portion of the stream network.
-                    More specifically, a hydrologic unit defines the areal extent of surface water drainage to an outlet
-                    point on a dendritic stream network or to multiple outlet points where the stream network is not
-                    dendritic. A hydrologic unit may represent all or only part of the total drainage area to an outlet
-                    point so that multiple hydrologic units may be required to define the entire drainage area at a given
-                    outlet. Hydrologic unit boundaries in the WBD are determined based on topographic, hydrologic, and other
-                    relevant landscape characteristics without regard for administrative, political, or jurisdictional
-                    boundaries. The WBD seamlessly represents hydrologic units at six required and two optional hierarchical
-                    levels."
-                </p>
-            </blockquote>
-            <figcaption class="blockquote-footer ps-3">Described in the <cite title="USGS Watershed Boundary Dataset Website">USGS Watershed Boundary Dataset Website</cite></figcaption>
-            <a target="_blank" href="https://www.usgs.gov/core-science-systems/ngp/national-hydrography/watershed-boundary-dataset?qt-science_support_page_related_con=4#qt-science_support_page_related_con" class="text-info icon-move-right">More about the Water Boundary Dataset (WBD)
-                <i class="fas fa-arrow-right text-sm ms-1"></i>
-            </a>
-        </figure>
+        </div>
+        <div class="col-md-4 col-12 my-auto">
+            <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/naming-convention-field-site.png' %}" alt="field site naming convention">
+        </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12 col-12 my-auto">
+            <h3>Watershed Boundary Dataset</h3>
+                <p class="pe-md-5 mb-4">
+                    The regions used to define unique Site IDs are from the United States Geological Survey (USGS) Watershed
+                    Boundary Dataset (WBD) hydrologic unit code 8 (HUC8). For more information, please visit the
+                    <a target="_blank" href="https://www.usgs.gov/core-science-systems/ngp/national-hydrography/watershed-boundary-dataset?qt-science_support_page_related_con=4#qt-science_support_page_related_con">USGS WBD website</a>.
+                    Basing naming conventions on hydrologic units were adopted from the
+                    <a target="_blank" href="https://doi.org/10.2737/RDS-2018-0010">U.S. Forest Service eDNAtlas database</a>.
+                </p>
+            <figure>
+                <blockquote class="blockquote">
+                    <p class="ps-2">
+                        "The Watershed Boundary Dataset (WBD) is a seamless, national hydrologic unit dataset. Simply put,
+                        hydrologic units represent the area of the landscape that drains to a portion of the stream network.
+                        More specifically, a hydrologic unit defines the areal extent of surface water drainage to an outlet
+                        point on a dendritic stream network or to multiple outlet points where the stream network is not
+                        dendritic. A hydrologic unit may represent all or only part of the total drainage area to an outlet
+                        point so that multiple hydrologic units may be required to define the entire drainage area at a given
+                        outlet. Hydrologic unit boundaries in the WBD are determined based on topographic, hydrologic, and other
+                        relevant landscape characteristics without regard for administrative, political, or jurisdictional
+                        boundaries. The WBD seamlessly represents hydrologic units at six required and two optional hierarchical
+                        levels."
+                    </p>
+                </blockquote>
+                <figcaption class="blockquote-footer ps-3">Described in the <cite title="USGS Watershed Boundary Dataset Website">USGS Watershed Boundary Dataset Website</cite></figcaption>
+                <a target="_blank" href="https://www.usgs.gov/core-science-systems/ngp/national-hydrography/watershed-boundary-dataset?qt-science_support_page_related_con=4#qt-science_support_page_related_con" class="text-info icon-move-right">More about the Water Boundary Dataset (WBD)
+                    <i class="fas fa-arrow-right text-sm ms-1"></i>
+                </a>
+            </figure>
+        </div>
+    </div>
 </div>
 {% endblock %}
 
