updated frontend fieldsite style

--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -29,19 +29,18 @@
         </p>
     </div>
     <div class="row">
-        <div class="col-md-8 col-12 my-auto">
-            <h3>Naming Convention for Site IDs</h3>
-            <p class="pe-md-5 mb-4"><strong>pRR_SCC</strong> <br>
-                Where: <br>
-                <ul>
-                    <li>p = Grant or project code</li>
-                    <li>RR = Watershed region code</li>
-                    <li>S = System type code</li>
-                    <li>CC = Two digit sequence, or number</li>
-                </ul>
-            </p>
+        <h3>Naming Convention for Site IDs</h3>
+        <div class="col-md-6 col-12 my-auto">
+            <h5>pRR_SCC</h5>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Where:</li>
+                <li class="list-group-item">p = Grant or project code</li>
+                <li class="list-group-item">RR = Watershed region code</li>
+                <li class="list-group-item">S = System type code</li>
+                <li class="list-group-item">CC = Two digit sequence, or number</li>
+            </ul>
         </div>
-        <div class="col-md-4 col-12 my-auto">
+        <div class="col-md-6 col-12 my-auto">
             <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/naming-convention-field-site.png' %}" alt="field site naming convention">
         </div>
     </div>
