--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -32,8 +32,8 @@
         <h3>Naming Convention for Site IDs</h3>
         <div class="col-md-6 col-12 my-auto">
             <h5>pRR_SCC</h5>
+            <p class="pe-md-5 mb-4">>Where:</p>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Where:</li>
                 <li class="list-group-item">p = Grant or project code</li>
                 <li class="list-group-item">RR = Watershed region code</li>
                 <li class="list-group-item">S = System type code</li>
