--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -32,7 +32,7 @@
         <h3>Naming Convention for Site IDs</h3>
         <div class="col-md-6 col-12 my-auto">
             <h5>pRR_SCC</h5>
-            <p class="pe-md-5 mb-4">>Where:</p>
+            <p class="pe-md-5">Where:</p>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">p = Grant or project code</li>
                 <li class="list-group-item">RR = Watershed region code</li>
