updated samplelabelrequest style in template:

--- a/frontend/templates/home/django-material-dashboard/model-add-samplelabelrequest.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-samplelabelrequest.html
@@ -1,4 +1,5 @@
 {% extends "home/django-material-dashboard/model-add.html" %}
+{% load static %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
