--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -33,12 +33,58 @@
         <div class="col-md-6 col-12 my-auto">
             <h5>pRR_SCC</h5>
             <p class="pe-md-5">Where:</p>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">p = Grant or project code</li>
-                <li class="list-group-item">RR = Watershed region code</li>
-                <li class="list-group-item">S = System type code</li>
-                <li class="list-group-item">CC = Two digit sequence, or number</li>
-            </ul>
+            <table class="table align-items-center mb-0">
+                <tbody>
+                    <tr>
+                      <td class="align-middle text-center">
+                        <div class="d-flex align-items-center">
+                          <span class="me-2 text-xs">p</span>
+                        </div>
+                      </td>
+                        <td class="align-middle text-center">
+                        <div class="d-flex align-items-center">
+                          <span class="me-2 text-xs">Grant or project code</span>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="align-middle text-center">
+                        <div class="d-flex align-items-center">
+                          <span class="me-2 text-xs">RR</span>
+                        </div>
+                      </td>
+                        <td class="align-middle text-center">
+                        <div class="d-flex align-items-center">
+                          <span class="me-2 text-xs">Watershed region code</span>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="align-middle text-center">
+                        <div class="d-flex align-items-center">
+                          <span class="me-2 text-xs">S</span>
+                        </div>
+                      </td>
+                        <td class="align-middle text-center">
+                        <div class="d-flex align-items-center">
+                          <span class="me-2 text-xs">System type code</span>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="align-middle text-center">
+                        <div class="d-flex align-items-center">
+                          <span class="me-2 text-xs">CC</span>
+                        </div>
+                      </td>
+                        <td class="align-middle text-center">
+                        <div class="d-flex align-items-center">
+                          <span class="me-2 text-xs">Two digit sequence, or number</span>
+                        </div>
+                      </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
         <div class="col-md-6 col-12 my-auto">
             <img class="w-100 border-radius-lg shadow-lg" src="{% static 'assets/img/naming-convention-field-site.png' %}" alt="field site naming convention">
