moved where to caption in  model-add-fieldsite.html

--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -32,8 +32,8 @@
         <h3>Naming Convention for Site IDs</h3>
         <div class="col-md-6 col-12 my-auto">
             <h5>pRR_SCC</h5>
-            <p class="pe-md-5">Where:</p>
             <table class="table align-items-center mb-0">
+                <caption style="text-align:start">Where:</caption>
                 <tbody>
                     <tr>
                       <td class="align-middle text-center">
