updated model-add description for fieldsite and samplelabelrequest

--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -33,7 +33,7 @@
         <div class="col-md-6 col-12 my-auto">
             <h5>pRR_SCC</h5>
             <table class="table align-items-center mb-0">
-                <caption style="text-align:start">Where:</caption>
+                <caption style="text-align:start; caption-side:top;">Where:</caption>
                 <tbody>
                     <tr>
                       <td class="align-middle text-center">
