testing conditional dropdowns for biome and feature in field site add form

--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -11,6 +11,7 @@
     <script src="{% static 'assets/js/field_site/field-site-add-req.js' %}"></script>
     <script src="{% static 'assets/js/field_site/field-site-add-readonly.js' %}"></script>
     <script src="{% static 'assets/js/field_site/leaflet-pip.js' %}"></script>
+    <script src="{% static 'assets/js/options-conditional-envo.js' %}"></script>
 {% endblock extrahead %}
 
 {% block messages %}
