added dependent dropdowns for project in field_site form

--- a/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-fieldsite.html
@@ -133,6 +133,7 @@
 <div id="url_envo_feature_fifth" data-url="{% url 'options_feature_fifth' %}" style="display: none;"></div>
 <div id="url_envo_feature_sixth" data-url="{% url 'options_feature_sixth' %}" style="display: none;"></div>
 <div id="url_envo_feature_seventh" data-url="{% url 'options_feature_seventh' %}" style="display: none;"></div>
+<div id="url_project" data-url="{% url 'options_project' %}" style="display: none;"></div>
 {% endblock %}
 
 <!-- Specific Page JS goes HERE  -->
