updated sidebar to reflect changes to segment names

--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -347,7 +347,7 @@
         <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Metadata</h6>
       </li>
       <li class="nav-item col-1">
-        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerinventoryreturnmetadata' in segment or 'detail_freezerinventoryreturnmetadata' in segment %} active bg-gradient-primary {% endif %}"
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerreturnmetadata' in segment or 'detail_freezerreturnmetadata' in segment %} active bg-gradient-primary {% endif %}"
            href="{% url 'view_freezerinventoryreturnmetadata' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">table_view</i>
@@ -364,7 +364,7 @@
         <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Log</h6>
       </li>
       <li class="nav-item col-1">
-        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerinventorylog' in segment or 'detail_freezerinventorylog' in segment %} active bg-gradient-primary {% endif %}"
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_freezerlog' in segment or 'detail_freezerlog' in segment %} active bg-gradient-primary {% endif %}"
            href="{% url 'view_freezerinventorylog' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">table_view</i>
