Added datetimepicker js

--- a/frontend/templates/custom_forms/widgets/datetime_picker.html
+++ b/frontend/templates/custom_forms/widgets/datetime_picker.html
@@ -8,7 +8,7 @@
 <script>
   $(function () {
     $("#{{ widget.datetimepicker_id }}").datetimepicker({
-      format: 'DD/MM/YYYY HH:mm',
+      format: 'MM/DD/YYYY HH:mm',
     });
   });
 </script>
