removed css from customdatetimepicker widget

--- a/frontend/templates/includes/django-material-dashboard/navigation.html
+++ b/frontend/templates/includes/django-material-dashboard/navigation.html
@@ -10,6 +10,7 @@
           <h6 class="font-weight-bolder mb-0">Dashboard</h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
+          <div class="ms-md-auto pe-md-3 d-flex align-items-center"></div>
           <ul class="navbar-nav  justify-content-end">
             <li class="nav-item d-flex align-items-center">
               <a href="{% url 'logout' %}" class="nav-link text-body font-weight-bold px-0">
