--- a/frontend/templates/custom_forms/admin_widgets/split_datetime.html
+++ b/frontend/templates/custom_forms/admin_widgets/split_datetime.html
@@ -1,5 +1,9 @@
 {{ form.media }}
 <div class="datetime col-md-12">
-  {{ date_label }} {% with widget=widget.subwidgets.0 %}{% include widget.template_name %}{% endwith %}<br>
+  <div class="col-md-6">
+  {{ date_label }} {% with widget=widget.subwidgets.0 %}{% include widget.template_name %}{% endwith %}
+  </div>
+  <div class="col-md-6">
   {{ time_label }} {% with widget=widget.subwidgets.1 %}{% include widget.template_name %}{% endwith %}
+  </div>
 </div>
