--- a/frontend/templates/custom_forms/admin_widgets/split_datetime.html
+++ b/frontend/templates/custom_forms/admin_widgets/split_datetime.html
@@ -1,9 +1,10 @@
 {{ form.media }}
 <div class="datetime col-md-12">
-  <div class="col-md-6">
-  {{ date_label }} {% with widget=widget.subwidgets.0 %}{% include widget.template_name %}{% endwith %}
+  <div class="col-md-12 d-flex">
+
+  <div class="col-2"> {{ date_label }} </div> <div class="col-8">{% with widget=widget.subwidgets.0 %} {% include widget.template_name %}{% endwith %} </div>
   </div>
-  <div class="col-md-6">
-  {{ time_label }} {% with widget=widget.subwidgets.1 %}{% include widget.template_name %}{% endwith %}
+  <div class="col-md-12 d-flex">
+  <div class="col-2"> {{ time_label }} </div> <div class="col-8"> {% with widget=widget.subwidgets.1 %} {% include widget.template_name %}{% endwith %} </div>
   </div>
 </div>
