--- a/frontend/templates/home/django-material-dashboard/model-add-popup.html
+++ b/frontend/templates/home/django-material-dashboard/model-add-popup.html
@@ -1,4 +1,4 @@
-{% extends "layouts/django-material-dashboard/base-fullscreen.html" %}
+{% extends "layouts/django-material-dashboard/base-popup.html" %}
 {% load static %}
 
 {% block title %} Add Popup {% endblock %}
@@ -8,32 +8,32 @@
 
 {% block content %}
 
-{% include 'includes/django-material-dashboard/navigation-fullscreen.html' %}
+  <div class="col-md-4">
+    <!-- Button trigger modal -->
+    <button type="button" class="btn bg-gradient-success btn-block mb-3" data-bs-toggle="modal" data-bs-target="#exampleModalMessage">
+      Message Modal
+    </button>
 
-    <section>
-      <div class="page-header min-vh-100">
-        <div class="container">
-          <div class="row">
-            <div class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
-              <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center" style="background-image: url('{% static 'assets/img/illustrations/illustration-signup.jpg' %}'); background-size: cover;">
-              </div>
-            </div>
-            <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
-              <div class="card card-plain">
-                <div class="card-header">
-                  <h4 class="font-weight-bolder">
-                    {{ page_title|title }}
-                  </h4>
-                </div>
-                <div class="card-body">
-                    {% include 'includes/django-material-dashboard/form.html' %}
-                </div>
-              </div>
-            </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModalMessage" tabindex="-1" role="dialog" aria-labelledby="exampleModalMessageTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h6 class="modal-title font-weight-normal" id="exampleModalLabel">{{ page_title|title }}</h6>
+            <button type="button" class="btn-close text-dark" data-bs-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            {% include 'includes/django-material-dashboard/form.html' %}
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn bg-gradient-secondary" data-bs-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </div>
     
 {% endblock content %}
 
