--- a/frontend/templates/layouts/django-material-dashboard/base-fullscreen.html
+++ b/frontend/templates/layouts/django-material-dashboard/base-fullscreen.html
@@ -53,7 +53,7 @@
 
   <!-- Specific Page JS goes HERE  -->
   {% block javascripts %}{% endblock javascripts %}
-
+  {% if not view.is_popup %}
   <script>
     var win = navigator.platform.indexOf('Win') > -1;
     if (win && document.querySelector('#sidenav-scrollbar')) {
@@ -63,6 +63,7 @@
       Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
     }
   </script>
+  {% endif %}
   <!-- Github buttons -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
