--- a/frontend/templates/home/django-material-dashboard/model-update-popup.html
+++ b/frontend/templates/home/django-material-dashboard/model-update-popup.html
@@ -1,4 +1,4 @@
-{% extends "layouts/django-material-dashboard/base-fullscreen.html" %}
+{% extends "layouts/django-material-kit/base-fullscreen.html" %}
 {% load static %}
 
 {% block title %} Update Popup {% endblock %}
@@ -7,34 +7,13 @@
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-
-{% include 'includes/django-material-dashboard/navigation-fullscreen.html' %}
-
-    <section>
-      <div class="page-header min-vh-100">
-        <div class="container">
-          <div class="row">
-            <div class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
-              <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center" style="background-image: url('{% static 'assets/img/illustrations/illustration-signup.jpg' %}'); background-size: cover;">
-              </div>
-            </div>
-            <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
-              <div class="card card-plain">
-                <div class="card-header">
-                  <h4 class="font-weight-bolder">
-                    {{ page_title|title }}
-                  </h4>
-                </div>
-                <div class="card-body">
-                    {% include 'includes/django-material-dashboard/form.html' %}
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    
+<div class="container-fluid py-4">
+<div class="row min-vh-80 h-100">
+  <div class="col-12">
+        {% include 'includes/django-material-dashboard/form.html' %}
+  </div>
+</div>
+</div>
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
