changed field.label_tag to field.label for form.html template

--- a/frontend/templates/includes/django-material-dashboard/form.html
+++ b/frontend/templates/includes/django-material-dashboard/form.html
@@ -18,7 +18,7 @@
         <div class="row">
             {% if field.errors %}
             <div class="alert alert-danger alert-dismissible text-white" role="alert">
-                <span class="text-sm">{{ field.label_tag }} {{ field.errors }}</span>
+                <span class="text-sm">{{ field.label }}: {{ field.errors }}</span>
                 <button type="button" class="btn-close text-lg py-3 opacity-10" data-bs-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
