--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -384,6 +384,33 @@
         <h6 class="text-uppercase text-xs text-white font-weight-bolder opacity-8">Bioinformatics</h6>
       </li>
     </ul>
+    {% if perms.bioinfo.view_qualitymetadata %}
+    <!-- begin qualitymetadata -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">Quality Metadata</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_qualitymetadata' in segment or 'detail_qualitymetadata' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_qualitymetadata' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+      {% if perms.bioinfo.add_qualitymetadata %}
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'add_qualitymetadata' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'add_qualitymetadata' %}"  data-bs-toggle="tooltip" data-bs-placement="top" title="Add">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">add_box</i>
+          </div>
+        </a>
+      </li>
+    {% endif %}
+    </ul>
+    <!-- end qualitymetadata -->
+    {% endif %}
     {% if perms.bioinfo.view_denoiseclustermetadata %}
     <!-- begin denoiseclustermetadata -->
     <ul class="nav nav-fill p-1" role="tablist">
