--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -29,10 +29,10 @@
                   <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                     <span>About Us</span>
                   </a>
-                  <a href="{% url 'projects' %}" class="dropdown-item border-radius-md">
+                  <a href="{% url 'view_projects' %}" class="dropdown-item border-radius-md">
                     <span>Projects</span>
                   </a>
-                  <a href="{% url 'publications' %}" class="dropdown-item border-radius-md">
+                  <a href="{% url 'view_publications' %}" class="dropdown-item border-radius-md">
                     <span>Publications</span>
                   </a>
                   <a href="{% url 'metadata_standards' %}" class="dropdown-item border-radius-md">
@@ -49,10 +49,10 @@
                   <a href="{% url 'about_us' %}" class="dropdown-item border-radius-md">
                     <span>About Us</span>
                   </a>
-                  <a href="{% url 'projects' %}" class="dropdown-item border-radius-md">
+                  <a href="{% url 'view_projects' %}" class="dropdown-item border-radius-md">
                     <span>Projects</span>
                   </a>
-                  <a href="{% url 'publications' %}" class="dropdown-item border-radius-md">
+                  <a href="{% url 'view_publications' %}" class="dropdown-item border-radius-md">
                     <span>Publications</span>
                   </a>
                   <a href="{% url 'metadata_standards' %}" class="dropdown-item border-radius-md">
