updated ajax def and names to reflect function

--- a/frontend/templates/home/django-material-kit/project-detail.html
+++ b/frontend/templates/home/django-material-kit/project-detail.html
@@ -48,7 +48,7 @@
                 Map Loading...
               </button>
             </div>
-            <div id="map" data-url="{% url 'map_projectsurvey' pk %}"></div>
+            <div id="map" data-url="{% url 'geom_projectsurvey' pk %}"></div>
             <div id="mapEmpty" class="d-flex justify-content-center lead"></div>
           </div>
         <!-- -------- END Grids -------- -->
