--- a/frontend/templates/includes/django-material-dashboard/navigation-fullscreen.html
+++ b/frontend/templates/includes/django-material-dashboard/navigation-fullscreen.html
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navigation">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                  <a class="nav-link me-2" target="_blank" href="{% url 'contact_us' %}">
+                  <a class="nav-link me-2" target="_blank" href="{% url 'add_contactus' %}">
                     <i class="fas fa-info-circle opacity-6 text-dark me-1"></i>
                     Support
                   </a>
