--- a/frontend/templates/includes/django-material-kit/footer.html
+++ b/frontend/templates/includes/django-material-kit/footer.html
@@ -83,7 +83,7 @@
             <h6 class="text-sm">Help & Support</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'contact_us' %}" target="_blank">
+                <a class="nav-link" href="{% url 'add_contactus' %}" target="_blank">
                   Contact Us
                 </a>
               </li>
