--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -37,7 +37,7 @@
                 <a href="{% url 'metadata_standards' %}" class="dropdown-item border-radius-md">
                   <span>Standards</span>
                 </a>
-                <a href="{% url 'contact_us' %}" class="dropdown-item border-radius-md">
+                <a href="{% url 'add_contactus' %}" class="dropdown-item border-radius-md">
                   <span>Contact Us</span>
                 </a>
               </div>
@@ -57,7 +57,7 @@
                 <a href="{% url 'metadata_standards' %}" class="dropdown-item border-radius-md">
                   <span>Standards</span>
                 </a>
-                <a href="{% url 'contact_us' %}" class="dropdown-item border-radius-md">
+                <a href="{% url 'add_contactus' %}" class="dropdown-item border-radius-md">
                   <span>Contact Us</span>
                 </a>
               </div>
@@ -170,7 +170,7 @@
               <div class="d-none d-lg-block">
                 <ul class="list-group">
                   <li class="nav-item list-group-item border-0 p-0">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="{% url 'contact_us' %}">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="{% url 'add_contactus' %}">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
                       <span class="text-sm">Get support from experts</span>
                     </a>
@@ -185,7 +185,7 @@
               </div>
               <div class="row d-lg-none">
                 <div class="col-md-12 g-0">
-                  <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="{% url 'contact_us' %}">
+                  <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="{% url 'add_contactus' %}">
                     <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
                     <span class="text-sm">Get support from experts</span>
                   </a>
