--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -113,6 +113,25 @@
     </ul>
     <!-- end filter sample -->
     {% endif %}
+
+    {% if perms.field_survey.view_subcoresample %}
+    <!-- begin subcore sample -->
+    <ul class="nav nav-fill p-1" role="tablist">
+      <li class="nav-item mt-2 col-8">
+        <h6 class="ps-2 ms-2 text-start text-uppercase text-xs text-white font-weight-bolder opacity-8">SubCore Sample</h6>
+      </li>
+      <li class="nav-item col-1">
+        <a class="nav-link text-white mb-0 px-0 py-1 {% if 'view_subcoresample' in segment %} active bg-gradient-primary {% endif %}"
+           href="{% url 'view_subcoresample' %}" data-bs-toggle="tooltip" data-bs-placement="top" title="View">
+          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+            <i class="material-icons opacity-10">table_view</i>
+          </div>
+        </a>
+      </li>
+    </ul>
+    <!-- end subcore sample -->
+    {% endif %}
+
     <!-- end field collection -->
     {% endif %}
 
