added frontend views for standardoperatingprocedure

--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -89,13 +89,13 @@
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-field-collection.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='field_collection' %}">
                             Field Collection
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-wet-lab.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='wet_lab' %}">
                             Wet Lab
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-bioinformatics.html">
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='bioinfo' %}">
                             Bioinformatics
                           </a>
                         </div>
@@ -132,13 +132,13 @@
                             </div>
                           </div>
                         </div>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-field-collection.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='field_collection' %}">
                           Field Collection
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-wet-lab.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='wet_lab' %}">
                           Wet Lab
                         </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-bioinformatics.html">
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'view_standardoperatingprocedure' sop_type='bioinfo' %}">
                           Bioinformatics
                         </a>
                         <div class="d-flex mb-2">
