--- a/frontend/templates/home/django-material-kit/sop.html
+++ b/frontend/templates/home/django-material-kit/sop.html
@@ -32,7 +32,7 @@
           <div class="container">
               {% if perms.utility.add_standardoperatingprocedure %}
               <div class="row">
-                  <a href="{% url 'add_standardoperatingprocedure' sop_type=sop.sop_type %}" class="d-flex align-items-center justify-content-end">
+                  <a href="{% url 'add_standardoperatingprocedure' sop_type={{ sop_type }} %}" class="d-flex align-items-center justify-content-end">
                       <i class="fa fa-plus text-secondary" data-bs-toggle="tooltip" data-bs-placement="top" title="Add New SOP"></i>
                   </a>
               </div>
