--- a/frontend/templates/home/django-material-kit/sop-update.html
+++ b/frontend/templates/home/django-material-kit/sop-update.html
@@ -31,7 +31,7 @@
     </div>
   </div>
 
- <div class="container shadow-xl mx-3 mx-md-4 mt-n6">
+ <div class="container mt-n6">
       <div class="row">
         <div class="col">
           <div class="card box-shadow-xl overflow-hidden mb-5">
