--- a/frontend/templates/home/django-material-kit/sop-update.html
+++ b/frontend/templates/home/django-material-kit/sop-update.html
@@ -23,8 +23,13 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="text-center">
-            <h1 class="text-white">{{ page_title|title }}</h1>
-            <p class="lead mb-4 text-white opacity-8">{{ page_subtitle }}</p>
+            <h1 class="text-white">
+              {% if sop_type == "wet_lab" %}Wet Laboratory
+              {% elif sop_type == "field_collection" %}Field Collection
+              {% elif sop_type == "bioinfo" %}Bioinformatics
+              {% else %}{{ page_title|title }}{% endif %}
+            </h1>
+            <p class="lead mb-4 text-white opacity-8">{% if sop_type %}Standard Operating Procedures{% else %}{{ page_subtitle }}{% endif %}</p>
           </div>
         </div>
       </div>
