--- a/frontend/templates/home/django-material-kit/sop.html
+++ b/frontend/templates/home/django-material-kit/sop.html
@@ -12,18 +12,23 @@
 
   {% include 'includes/django-material-kit/navigation-transparent.html' %}
 
-  <div class="page-header min-vh-80"
-       {% if sop_type == "wet_lab" %} style="background-image: url('https://images.unsplash.com/photo-1615631570866-4ff59a69093a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')"
-       {% elif sop_type == "field_collection" %} style="background-image: url('https://images.unsplash.com/photo-1592870407191-67fa2b6c374e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')"
-       {% elif sop_type == "bioinfo" %} style="background-image: url('https://images.unsplash.com/photo-1558494949-ef010cbdcc31?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')"
-       {% else %} style="background-image: url('https://images.unsplash.com/photo-1546250001-6b7b60086f17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')" {% endif %}>
+  <div class="page-header min-vh-80" style="background-image: url('
+        {% if sop_type == 'wet_lab' %}https://images.unsplash.com/photo-1615631570866-4ff59a69093a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80
+        {% elif sop_type == 'field_collection' %}https://images.unsplash.com/photo-1592870407191-67fa2b6c374e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80
+        {% elif sop_type == 'bioinfo' %}https://images.unsplash.com/photo-1558494949-ef010cbdcc31?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80
+        {% else %}https://images.unsplash.com/photo-1546250001-6b7b60086f17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80{% endif %}')">
     <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="text-center">
-            <h1 class="text-white">{{ page_title|title }}</h1>
-            <p class="lead mb-4 text-white opacity-8">{{ page_subtitle }}</p>
+            <h1 class="text-white">
+              {% if sop_type == 'wet_lab' %} Wet Laboratory
+              {% elif sop_type == 'field_collection' %} Field Collection
+              {% elif sop_type == 'bioinfo' %} Bioinformatics
+              {% else %} {{ page_title|title }} {% endif %}
+            </h1>
+            <p class="lead mb-4 text-white opacity-8">{% if sop_type %}Standard Operating Procedures{% else %}{{ page_subtitle }}{% endif %}</p>
           </div>
         </div>
       </div>
