--- a/frontend/templates/home/django-material-kit/sop.html
+++ b/frontend/templates/home/django-material-kit/sop.html
@@ -12,11 +12,12 @@
 
   {% include 'includes/django-material-kit/navigation-transparent.html' %}
 
-  <div class="page-header min-vh-80" style="background-image: url('
-        {% if sop_type == 'wet_lab' %}https://images.unsplash.com/photo-1615631570866-4ff59a69093a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80
-        {% elif sop_type == 'field_collection' %}https://images.unsplash.com/photo-1592870407191-67fa2b6c374e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80
-        {% elif sop_type == 'bioinfo' %}https://images.unsplash.com/photo-1558494949-ef010cbdcc31?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80
-        {% else %}https://images.unsplash.com/photo-1546250001-6b7b60086f17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80{% endif %}')">
+  <div class="page-header min-vh-80"
+       style="{% if sop_type == 'wet_lab' %}background-image: url('https://images.unsplash.com/photo-1615631570866-4ff59a69093a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
+       {% elif sop_type == 'field_collection' %}background-image: url('https://images.unsplash.com/photo-1592870407191-67fa2b6c374e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
+       {% elif sop_type == 'bioinfo' %}background-image: url('https://images.unsplash.com/photo-1558494949-ef010cbdcc31?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
+       {% else %}background-image: url('https://images.unsplash.com/photo-1546250001-6b7b60086f17?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')
+       {% endif %}">
     <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container">
       <div class="row">
