added helper text to api documentation

--- a/frontend/templates/drf-yasg/swagger-ui.html
+++ b/frontend/templates/drf-yasg/swagger-ui.html
@@ -63,6 +63,8 @@
           </div>
         </div>
       </header>
+        <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
+    <div class="container">
       <div class="section text-start">
         <h5 class="font-weight-bolder mt-3">What is an API?</h5>
         <p class="pe-md-5 mb-4">
@@ -81,6 +83,8 @@
           The drf-yasg documentation includes all Create, Read, Update, and Delete (CRUD) operations.
         </p>
       </div>
+    </div>
+        </div>
     </body>
 {% endblock %}
 
