--- a/frontend/templates/drf-yasg/redoc.html
+++ b/frontend/templates/drf-yasg/redoc.html
@@ -53,20 +53,9 @@
               <div class="col-lg-8 text-center mx-auto my-auto">
                 <h1 class="text-white">Redoc Documentation</h1>
                 <p class="lead mb-4 text-white opacity-8">Automated generation of OpenAPI 2.0 schemas with drf-yasg.</p>
-                  <div class="d-flex justify-content-center">
-                      <a href="https://github.com/axnsan12/drf-yasg"><i class="fab fa-github text-4xl text-white me-4"></i></a>
-                  </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </header>
-      <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
-          <div class="container">
-              <div class="section text-start">
-                  <h5 class="font-weight-bolder mt-3">What is an Application Programming Interface?</h5>
-                  <p class="pe-md-5 mb-4">
-                      There are several ways information within the database can be accessed. One accepted standard is through an
+                  <h5 class="font-weight-bolder mt-3 text-white">What is an Application Programming Interface?</h5>
+                <p class="lead mb-4 text-white opacity-8">
+                    There are several ways information within the database can be accessed. One accepted standard is through an
                       Application Programming Interface, or API. An API is a structured way to allow for programmatic access of
                       records from a database. The API is written to extract data from the database and transform it into a common
                       format, such as JSON, in a process called serialization. For our API, we wrote the serializers within
@@ -78,11 +67,12 @@
                       formatting data from an API. <br>
 
                       All API documentation are automatically generated with the <a href="https://github.com/axnsan12/drf-yasg">drf-yasg library</a>.
-                      The drf-yasg documentation includes all Create, Read, Update, and Delete (CRUD) operations.
-                  </p>
+                      The drf-yasg documentation includes all Create, Read, Update, and Delete (CRUD) operations.</p>
               </div>
+            </div>
           </div>
-      </div>
+        </div>
+      </header>
     </body>
 {% endblock %}
 
